# main.go
@@ -28,7 +28,7 @@ func init() {
 	// dbGorm.Debug().DropTableIfExists(&models.TblComplaintSubCategories{})
 	// dbGorm.Debug().DropTableIfExists(&models.TblRoles{})
 	//dbGorm.Debug().DropTableIfExists(&models.TblComplaintCategories{})
-
+	//dbGorm.Debug().DropTableIfExists(&models.TblComplaintSubCategories{})
 	// // dbGorm.SingularTable(true)
 	// dbGorm.Debug().AutoMigrate(&models.TblUsers{})
 	// dbGorm.Debug().AutoMigrate(&models.TblRoles{})
@@ -38,6 +38,7 @@ func init() {
 	// dbGorm.Debug().AutoMigrate(&models.TblComplaintSubCategories{})
 	//dbGorm.Debug().AutoMigrate(&models.TblComplaintType{})
 	//dbGorm.Debug().AutoMigrate(&models.TblComplaintCategories{})
+	//dbGorm.Debug().AutoMigrate(&models.TblComplaintSubCategories{})
 	// fmt.Println("Done with table creation")
 	//}
 }
@@ -52,24 +53,26 @@ func init() {
 // @license.url https://github.com/MartinHeinz/go-project-blueprint/blob/master/LICENSE
 // @BasePath /api/v1
 func main() {
+	AppPort := utilities.GoDotEnvVariable("AppPort")
 	docs.SwaggerInfo.Title = "Consumer complaint Management System API"
 	docs.SwaggerInfo.Description = "This is a consumers complaints management system API.."
 	docs.SwaggerInfo.Version = "1.0"
 	//docs.SwaggerInfo.Host = "petstore.swagger.io"
-	docs.SwaggerInfo.Host = "localhost:8094"
+	docs.SwaggerInfo.Host = "localhost" + AppPort
 	docs.SwaggerInfo.BasePath = "/"
 	docs.SwaggerInfo.Schemes = []string{"http", "https"}
 	r := gin.Default()
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
-	r.POST("/Users/CreateUser/", handleReq.CreateUser)
-	r.GET("/Users/GetUserFullInfoByEmail/:UserEmail", handleReq.GetUserFullInfoByEmail)
-	r.POST("/Users/ChangeUserDetails/", handleReq.ChangeUserDetails)
-	r.GET("/Users/FetchAvailableRoles", handleReq.FetchRoles)
-	r.GET("/Users/ChangeUserStatus/:Username/:Status/:RoleID", handleReq.ChangeUserStatus)
-
-	r.POST("/complaint/LogComplaintRequest/", handleReq.LogComplaintRequest)
-	r.POST("/complaint/CreateComplaintCategories/", handleReq.CreateComplaintCategories)
-	r.GET("/complaint/FetchComplaintCategories/", handleReq.FetchComplaintCategories)
-	r.GET("/complaint/GetComplaintByRefID/:ReferenceID", handleReq.GetComplaintByRefID)
-	r.Run(utilities.GoDotEnvVariable("AppPort"))
+	r.POST("/api/Users/CreateUser/", handleReq.CreateUser)
+	r.GET("/api/Users/GetUserFullInfoByEmail/:UserEmail", handleReq.GetUserFullInfoByEmail)
+	r.POST("/api/Users/ChangeUserDetails/", handleReq.ChangeUserDetails)
+	r.GET("/api/Users/FetchAvailableRoles", handleReq.FetchRoles)
+	r.GET("/api/Users/ChangeUserStatus/:Username/:Status/:RoleID", handleReq.ChangeUserStatus)
+	r.POST("/api/complaint/LogComplaintRequest/", handleReq.LogComplaintRequest)
+	r.POST("/api/complaint/CreateComplaintCategories/", handleReq.CreateComplaintCategories)
+	r.GET("/api/complaint/FetchComplaintCategories/", handleReq.FetchComplaintCategories)
+	r.POST("/api/complaint/CreateComplaintSubCategories/", handleReq.CreateComplaintSubCategories) //done
+	r.GET("/api/complaint/FetchComplaintSubCategories/", handleReq.FetchComplaintSubCategories)    //done
+	r.GET("/api/complaint/GetComplaintByRefID/:ReferenceID", handleReq.GetComplaintByRefID)
+	r.Run(AppPort)
 }
